tests/miniJava/neg/005541_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { while public int [] java ( ) { return 0 ; } }
